--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div id="app"></div>
-<script src="./src/index.jsx" type="module"></script>
+<script src="./index.jsx" type="module"></script>
 </body>
 </html>
+
